<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_main_start"
        app:layout_constraintEnd_toEndOf="@+id/btn_main_consult"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btn_main_start"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_main_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_start"
        app:layout_constraintBottom_toTopOf="@+id/btn_main_worked"
        app:layout_constraintEnd_toStartOf="@+id/btn_main_consult"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_main_consult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_verify"
        app:layout_constraintBottom_toTopOf="@+id/btn_main_logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_main_start"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_main_worked"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_worked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/btn_main_start"
        app:layout_constraintTop_toBottomOf="@+id/btn_main_start" />

    <Button
        android:id="@+id/btn_main_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btn_main_consult"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/btn_main_consult"
        app:layout_constraintTop_toBottomOf="@+id/btn_main_consult" />

    <Chronometer
        android:id="@+id/chr_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/txt_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>